<resources>
    <string name="app_name">Acc</string>
    <string name="X">X</string>
    <string name="visor_das_acelera_es">Visor das acelerações</string>
    <string name="visor_das_aceleracoes" />
    <string name="Titulo">Titulo</string>
    <string name="Y">Y</string>
    <string name="Z">Z</string>
    <string name="salvarBotao">Salvar</string>
    <string name="Salvar">Salvar</string>
</resources>
